Fix for class title being too big depending on combo

--- a/style.css
+++ b/style.css
@@ -906,7 +906,7 @@ font-family: Arial, Helvetica, sans-serif;
 .classTitle {
     width: 100%;
     height: 21%;
-    font-size: clamp(15px, 1.0vw, 25px);
+    font-size: clamp(15px, 1.0vw, 23px);
     border-bottom: 1px solid #434343;
     display: flex;
     justify-content: center;
